knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account_Updates__e/Account_Updates__e.object-meta.xml
<CustomObject>
    <label>Account Updates</label>
    <pluralLabel>Account Updates</pluralLabel>
</CustomObject>