knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account_Updates__e/fields/AccountRecordId__c.field-meta.xml
<CustomField>
    <fullName>AccountRecordId__c</fullName>
    <label>AccountRecordId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>