knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account_Updates__e/fields/BillingcountryCode__c.field-meta.xml
<CustomField>
    <fullName>BillingcountryCode__c</fullName>
    <label>BillingcountryCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>