knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account_Updates__e/fields/BillingstateCode__c.field-meta.xml
<CustomField>
    <fullName>BillingstateCode__c</fullName>
    <label>BillingstateCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>