knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account_Updates__e/fields/BillingZipPostalCode__c.field-meta.xml
<CustomField>
    <fullName>BillingZipPostalCode__c</fullName>
    <label>BillingZipPostalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>