knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account_Updates__e/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <label>County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>