knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account_Updates__e/fields/GlobalFacilityID__c.field-meta.xml
<CustomField>
    <fullName>GlobalFacilityID__c</fullName>
    <label>GlobalFacilityID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>