knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account_Updates__e/fields/RecordTypeDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeDeveloperName__c</fullName>
    <label>RecordTypeDeveloperName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>